<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.skydeck.angelguardian.LocationActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/email_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/email_view"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/password_view"
        android:text="@string/userid_text"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/email_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/email_name_view"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="Fill in email" />

    <TextView
        android:id="@+id/password_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/password_view"
        android:layout_below="@+id/email_name_view"
        android:text="@string/password_text"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/password_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/email_view"
        android:layout_toRightOf="@+id/password_name_view"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/deviceids_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_name_view"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/deviceids_text"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/deviceids_name_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/deviceid1_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/deviceids_name_view"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Fill in device mac address" />

            <EditText
                android:id="@+id/deviceid2_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/deviceids_name_view"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Fill in device mac address" />

            <EditText
                android:id="@+id/deviceid3_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/deviceids_name_view"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Fill in device mac address" />

            <EditText
                android:id="@+id/deviceid4_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/deviceids_name_view"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Fill in device mac address" />

            <EditText
                android:id="@+id/deviceid5_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/deviceids_name_view"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Fill in device mac address" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_locate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/deviceids_name_view"
        android:layout_alignBottom="@+id/deviceids_name_view"
        android:layout_alignParentEnd="true"
        android:text="@string/locate_devices" />

</RelativeLayout>
