<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/location"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.skydeck.angelguardian.LocationActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/userid_text"
        android:id="@+id/email_name_view"
        android:layout_alignBottom="@+id/email_view"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="18sp"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/password_view" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_view"
        android:layout_toRightOf="@+id/email_name_view"
        android:text="Fill in email"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password_name_view"
        android:layout_below="@+id/email_name_view"
        android:layout_alignBottom="@+id/password_view"
        android:textSize="18sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_view"
        android:layout_toRightOf="@+id/password_name_view"
        android:layout_below="@+id/email_view"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/deviceid_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/deviceid_name_view"
        android:layout_below="@+id/password_name_view"
        android:layout_alignBottom="@+id/deviceid_view"
        android:textSize="18sp"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/password_view" />

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/deviceid_view"
        android:layout_below="@+id/password_view"
        android:layout_toRightOf="@+id/deviceid_name_view"
        android:text="Fill in device mac address"
        android:layout_alignEnd="@+id/password_view" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/deviceid_name_view"
        android:id="@+id/geo_location_layout">

        <TextView
            android:text="geography"
            android:layout_width="match_parent"
            android:id="@+id/geo_view"
            android:textAlignment="center"
            android:layout_height="70dp"
            android:gravity="center"
            android:textSize="18sp" />

        <TextView
            android:text="reverse geography"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/rgeo_view"
            android:textAlignment="center"
            android:gravity="center" />

        <com.google.android.gms.maps.MapView
            android:layout_width="match_parent"
            android:id="@+id/mapView"
            android:layout_height="match_parent" />

    </LinearLayout>

</RelativeLayout>
